# asgi-ml

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/src/: main.py
app/src/datamodels/: forest.py  task.py
app/src/dependencies/: celery.py
app/src/routers/: monitor.py  scheduler.py
requirements/: base.txt
src/: app.py  conf.py  main.py
src/datamodels/: forest.py  monitor.py
src/dependencies/: base.py  celery.py  redis.py
src/dependency/: ml.py
src/ml/: forest.py
src/routers/: forest.py  monitor.py
src/utils/: admin.py  build_key.py
tests/: conftest.py  test_monitoring.py
worker/: conf.py  ml.py  pyproject.toml  worker.Dockerfile  worker.py
