[tool.poetry]
name = "asgi-ml"
version = "0.1.0"
description = ""
authors = ["Vitaly Petrov <VitaliyPetrov18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiocache = "0.11.1"
aioredis = "1.3.1"
uvicorn = ">=0.11.3,<1"
pydantic = "1.6.1"
ujson = "4.1.0"
fastapi = ">=0.61.0"
numpy = ">=1.18"
scipy = ">=1.4"
scikit-learn = ">=0.23"
pandas = ">=0.25.3"
python-dotenv = ">=0.1"
starlette-prometheus = "0.7.0"
isort = "^5.9.3"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "3.7.9"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
